<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/ask_for_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="60dp"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/inputValue"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:inputType="text" />

    <TextView
        android:text="@string/topshop_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topshop_hint"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:fontFamily="casual"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/zara_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/zara_hint"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp" />

    <Button
        android:text="@string/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:fontFamily="casual"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />
</LinearLayout>