<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.finalproject.MainActivity">

    <TextView
        android:text="@string/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/welcomeText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Switch
        android:text="@string/auto_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="54dp"
        android:id="@+id/auto_focus"
        android:fontFamily="casual" />

    <Switch
        android:text="@string/flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/auto_focus"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="22dp"
        android:id="@+id/flash"
        android:fontFamily="casual"
        android:textColor="@android:color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        android:layout_marginTop="40dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/flash"
        android:layout_alignStart="@+id/auto_focus"
        android:layout_marginBottom="14dp"
        android:id="@+id/barcode_value"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:layout_alignEnd="@+id/flash"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:id="@+id/status_message"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/inputButton"
        android:text="@string/inputButton"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:layout_below="@+id/scanButton"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scanButton"
        android:fontFamily="casual"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/auto_focus"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
